
Alle relevanten Änderungen an diesem Modul werden hier dokumentiert.
Format basiert auf [Keep a Changelog](https://keepachangelog.com/de/1.0.0/) und [SemVer](https://semver.org/lang/de/).

## [1.6.1] – 2026-01-23
### Added
- Edit-Targets aus NewStandardFindings wählen nun automatisch das passende Finding im Editor aus und melden Updates zurück, damit NSF sofort aktualisiert.

## [1.6.0] – 2026-01-23
### Added
- Vorbefüllte Standardfinding-Entwürfe aus NewStandardFindings werden beim Start des Editors automatisch übernommen.
- Prefill-Daten können auch von bereits geöffneten Editor-Instanzen übernommen werden.

## [1.5.0] – 2025-10-02
### Added
- Möglichkeit, mehrere Mod-Spalten über eine "+"-Schaltfläche hinzuzufügen und bei Bedarf wieder zu entfernen.
- Persistenz, Normalisierung und Export der Mod-Listen inklusive Unterstützung für den Kopiertext.

### Changed
- Layout der Mods-Sektion angepasst, damit die dynamischen Spalten und gemeinsamen Vorschlagslisten strukturiert dargestellt werden.

---

## [1.4.0] – 2025-10-01
### Added
- Schneller Duplizieren-Button in der Findings-Liste, der komplette Einträge inklusive Partnummern, Teilepaaren und Rohdaten kopiert.

### Changed
- Aktionsschaltflächen der Findings-Liste werden nun erst bei Hover oder Fokus eingeblendet, was die Oberfläche ruhiger und tastaturfreundlicher macht.

---

## [1.3.0] – 2025-09-30
### Changed
- Entferntes Speichern der Findings-Daten im Local Storage zugunsten eines konsequenten Schreibens in die ausgewählte JSON-Datei.
- Der aktuell genutzte JSON-Pfad wird nun als globaler Local-Storage-Wert hinterlegt, sodass andere Module ihn beim Start übernehmen können.

### Removed
- Lokaler Auto-Save für Findings-Daten.

---

## [1.2.1] – 2025-09-26
### Changed
- Modulmanifest aktualisiert und die Version auf 1.2.1 erhöht.

## [1.2.0] – 2025-09-29
### Added
- Partnummern-Feld oberhalb des Labels mit dynamischen Eingabezeilen und "Plus"-Schaltfläche für mehrere Nummern.