@@ -6,6 +6,7 @@ Format basiert auf [Keep a Changelog](https://keepachangelog.com/de/1.0.0/) und 
 ## [1.6.1] – 2026-01-23
 ### Added
 - Edit-Targets aus NewStandardFindings wählen nun automatisch das passende Finding im Editor aus und melden Updates zurück, damit NSF sofort aktualisiert.
+- Der Suchbegriff wird beim Bearbeiten automatisch mit dem Finding-Label vorbefüllt, um den Eintrag gezielt zu filtern.
 
 ## [1.6.0] – 2026-01-23
 ### Added
